<resources>
    <string name="app_name">EzJobs</string>
    <string name="register">Employer Register</string>
    <string name="username">Username</string>
    <string name="dob">Date of Birth</string>
    <string name="phone">Phone Number</string>
    <string name="add">Address</string>
    <string name="pass">Password</string>
    <string name="repass">Re Type Password</string>
    <string name="regbtn">REGISTER</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="repas">Re-Type Password</string>
    <string name="profilename">Profile Name</string>
    <string name="dob1">Date of Birth</string>
    <string name="pnum">Phone Number</string>
    <string name="address">Address</string>
    <string name="edit">Edit Your Profile</string>
    <string name="delete">Delete Your Profile</string>
    <string name="create">Create your account</string>
    <string name="yourprofile">Your Profile</string>
    <string name="save">Save Your Changes</string>
    <string name="editprofile">Edit Your Profile</string>
    <string name="welcome">Welcome</string>
    <string name="sign">Sign in to continue</string>
    <string name="loginusername">Username</string>
    <string name="loginpass">Password</string>
    <string name="log">Login</string>
    <string name="signin">Sign in</string>
    <string name="usernameorid">Username or Id</string>
    <string name="forget">Forget Password</string>
    <string name="forgetpass">Forget Password ?</string>
    <string name="loginall">Already have an account</string>
    <string name="SignUp">Sign Up</string>
    <string name="dontacc">Dont have an account ?</string>
    <string name="loginsignup">Sign Up</string>
    <string name="donthaveacc">Don\'t have an account ?</string>
    <string name="signinin">Already have an account ?</string>
    <string name="signininn">Sign In</string>
    <string name="worksat">"My company "</string>
    <string name="worksatt">Works at</string>
    <string name="work">Work position</string>
    <string name="workpo">Work Position</string>
    <string name="email">Email</string>
    <string name="accoun">Account</string>
    <string name="btnmyads">My Ads</string>
    <string name="btnmem">My Membership</string>
    <string name="btnprofile">My Profile</string>
    <string name="btnfaq">FAQ</string>
    <string name="btnabout">About Us</string>
    <string name="btnlogout">Log Out</string>
    <string name="agree"><![CDATA[Agree with Terms & Conditions]]></string>
    <string name="username1">Username</string>
    <string name="hintusername">Username or Id</string>
    <string name="hint">Username or Id</string>
    <string name="click">Click here</string>
    <string name="back">Back to Account</string>
    <string name="clickh">Click here</string>
    <string name="change">Change Your Password</string>
    <string name="newpass">Enter new password</string>
    <string name="conpass">Confirm your password</string>
    <string name="save1">Save password</string>

    //Create profile
    <string name="createProfile">Create Profile</string>
    <string name="cUsername">Username</string>
    <string name="cEmail">Email</string>
    <string name="cPhoneNo">Phone Number</string>
    <string name="cAddress">Address</string>
    <string name="cWorksAt">Works At</string>
    <string name="cWorkPost">Work Position</string>
    <string name="createProfBtn">Save Profile</string>

    //Register Employer
    <string name="regEmpTitle">Register Employer</string>
    <string name="createEmpTitle">General Details</string>
    <string name="regEmpEmail">Email</string>
    <string name="regEmpPassword">Password</string>
    <string name="regBtn">Register</string>
</resources>
